--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
             
         </article>
     </section>
+
+    <section class="info">
+        <article class="row">
+            <h2>Find out more</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facere? Autem aliquam reiciendis laboriosam nam repellendus, quas dolorem nisi quam iusto atque?</p>
+        </article>
+        <article class="row">
+            <div>
+                <a href=""><i class="fas fa-camera-retro"></i></a>
+                <h4>Record your memories</h4>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div>
+                <a href=""><i class="fas fa-envelope"></i></a>
+                <h4>Send e-mail</h4>
+                <p>zeleznicar@gmail.com</p>
+            </div>
+            <div>
+                <a href=""><i class="fas fa-phone"></i></a>
+                <h4>Call us</h4>
+                <p>+381643690889</p>
+            </div>
+        </article>
+    </section>
         
     </main>
 
