--- a/index.html
+++ b/index.html
@@ -69,6 +69,24 @@
             </div>
         </article>
     </section>
+
+    <section class="slider">
+        <h2>Gallery</h2>
+        <div class="owl-carousel owl-theme">
+            <div class="item"><img src="img/slide1.jpg" alt=""></div>
+            <div class="item"><img src="img/slide2.jpg" alt=""></div>
+            <div class="item"><img src="img/slide3.jpg" alt=""></div>
+            <div class="item"><img src="img/slide4.jpg" alt=""></div>
+            <div class="item"><img src="img/slide5.jpg" alt=""></div>
+            <div class="item"><img src="img/slide6.jpg" alt=""></div>
+            <div class="item"><img src="img/slide7.jpg" alt=""></div>
+            <div class="item"><img src="img/slide8.jpg" alt=""></div>
+            <div class="item"><img src="img/slide9.jpg" alt=""></div>
+            <div class="item"><img src="img/slide1.jpg" alt=""></div>
+        </div>
+
+
+    </section>
         
     </main>
 
