--- a/index.html
+++ b/index.html
@@ -84,10 +84,32 @@
             <div class="item"><img src="img/slide9.jpg" alt=""></div>
             <div class="item"><img src="img/slide1.jpg" alt=""></div>
         </div>
-
-
     </section>
         
+    <section class="programs">
+        <div class="wrapper">
+            <article>
+                <div class="text">
+                    <h2>Wednesday Walk</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vero ex cumque quod delectus quo.</p>
+                    <button>Read More</button>
+                </div>
+                <div class="img1">
+                    <img src="img/programi1.jpg" alt="">
+                </div>
+            </article>
+            <article>
+                <div class="img1">
+                    <img src="img/programi2.jpg" alt="">
+                </div>
+                <div class="text">
+                    <h2>Weekend Hikes</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vero ex cumque quod delectus quo.</p>
+                    <button>Read More</button>
+                </div>
+            </article>
+        </div>
+    </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
