--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
             </article>
         </div>
     </section>
+
+    <footer>
+        <h2>Contact Us</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Deserunt minus harum cum saepe soluta quas expedita vitae repudiandae. Iste, culpa?</p>
+        <form action="sender.php">
+            <input type="email" placeholder="Enter e-mail">
+            <input type="submit" value="Send">
+        </form>
+    </footer>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
