--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="info">
         <article class="row">
             <h2>Find out more</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facere? Autem aliquam reiciendis laboriosam nam repellendus, quas dolorem nisi quam iusto atque?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nesciunt, facere? Autem aliquam reiciendis laboriosam nam repellendus, quas dolorem nisi quam iusto atque?</p>
         </article>
         <article class="row">
             <div>
